# python-autograded-template

./: .replit  README.md  pyproject.toml
.github/classroom/: autograding.json
