[tool.poetry]
name = "assn-autograding-exercise-1-13-may-4-kkarim"
version = "0.1.0"
description = ""
authors = ["mrkarim <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
